--- a/2dTopologyOpt/TopOptRes_plot.ipynb
+++ b/2dTopologyOpt/TopOptRes_plot.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "# Load mesh\n",
-    "mshfile = \"TopOpt_H025_D300_md7.msh\"\n",
+    "mshfile = \"TopOptRes.msh\"\n",
     "model = GmshDiscreteModel(mshfile)\n",
     "\n",
     "degree = 2\n",
